# logwright

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/: demo.md  logwright-demo.cast
logwright/: __init__.py  __main__.py  app.py  cache.py  cli.py  env.py  gittools.py  models.py  pricing.py  providers.py
tests/: test_app.py
