[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "logwright"
version = "0.1.1"
description = "AI-assisted git commit message critic and writer"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Victor"}
]
keywords = ["git", "commit", "cli", "llm", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Utilities",
]

[project.scripts]
logwright = "logwright.cli:main"

[project.urls]
Homepage = "https://github.com/Setmaster/logwright"
Repository = "https://github.com/Setmaster/logwright"
Documentation = "https://github.com/Setmaster/logwright#readme"
Issues = "https://github.com/Setmaster/logwright/issues"

[tool.setuptools]
packages = ["logwright"]
